@@ -454,6 +454,8 @@ Library
 - Issue #26848: Fix asyncio/subprocess.communicate() to handle empty input.
   Patch by Jack O'Connor.
 
+- Issue #27040: Add loop.get_exception_handler method
+
 Documentation
 -------------
 
